--- a/code/Viz/VizTool.html
+++ b/code/Viz/VizTool.html
@@ -19,7 +19,7 @@
 </h1>
 <div class="infobox" id = "infobox">
     <h2 id = "info_h2">Model Hierarchy</h2>
-    <p id = "info_model_name">Model -</p>
+    <p id = "info_model_name">Model -
     <p id = "info_layer_name">Layer -</p>
     <p id = "info_ids">Ids - </p>
     <p id = "info_epochs">Epochs - </p>
